# windy-registry

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: canary.yml  canonical-domains-lint.yml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_drop_fork_fk.py
contracts/: README.md  ops.mcp.v1.json  weave.json
deploy/: .env.example  Caddyfile  Dockerfile  SUBSTRATE.md  docker-compose.prod.yml  docker-compose.yml  integrity-refresh.service  integrity-refresh.timer
deploy/backup/: lifecycle.json  pg_backup.service  pg_backup.sh  pg_backup.timer
docs/: federation-demo.py  federation-spec.md
docs/integrations/: windy-chat.md
docs/runbooks/: backup-restore.md  prod-deploy.md  r2-setup.md  seed-echo-hq.md
src/windy_drops_spec/: VENDOR.md  __init__.py  _generated.py
src/windy_registry/: __init__.py  config.py  database.py  main.py
src/windy_registry/jobs/: refresh_integrity.py
src/windy_registry/middleware/: auth.py  rate_limit.py  revocation.py
src/windy_registry/models/: __init__.py  author.py  drop.py  library.py  rating.py  stripe_.py  webhook.py
src/windy_registry/routes/: authors.py  browse.py  drops.py  federation.py  health.py  library.py  ratings.py  stripe_connect.py  tips.py  version.py  webhooks.py
src/windy_registry/schemas/: authors.py  browse.py  forks.py  library.py  publish.py  ratings.py  stripe_.py  webhooks.py
src/windy_registry/services/: canonical.py  handle.py  i18n.py  r2_upload.py  sandbox_host.py  signature_verify.py  stripe_client.py  webhook_dispatcher.py
tests/: test_auth.py  test_authors.py  test_browse.py  test_bundle_upload.py  test_federation.py  test_forks.py  test_health_r2_probe.py  test_library.py  test_models.py  test_postgres_integration.py  test_publish.py  test_r2_bundle_smoke.py  test_ratings.py  test_revocation.py  test_round1_gaps.py  test_sandbox.py  test_stripe.py  test_vendor_drift.py  test_version.py  test_webhooks.py  test_withdraw.py
tools/: canary_smoke.py  r2-provision.sh  seed_echo_hq.py  seed_glance.py  webhook-subscriber-sample.py
