[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windy-registry"
version = "0.1.0"
description = "Windy Drops registry service — FastAPI + Postgres + R2. Strand: WD-12+ of windy-drops/docs/DNA_STRAND_MASTER_PLAN.md."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["windy", "drops", "registry", "marketplace", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "tenacity>=8",
    "pyyaml>=6",
    "windy-drops-spec>=0.1",
]

[project.optional-dependencies]
db = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
]
auth = [
    "python-jose[cryptography]>=3.3",
]
stripe = [
    "stripe>=10",
]
r2 = [
    "boto3>=1.34",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
all = [
    "windy-registry[db,auth,stripe,r2,test]",
]

[project.urls]
Homepage = "https://windydrops.com"
Repository = "https://github.com/sneakyfree/windy-registry"
Issues = "https://github.com/sneakyfree/windy-registry/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/windy_registry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
